<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activity.ViewVideo"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/icon_white_back"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btn_like"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_marginRight="10dp"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/icon_like_white"/>

        <ImageButton
            android:id="@+id/btn_option"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/icon_white_option"/>

    </LinearLayout>

    <VideoView
        android:id="@+id/view_video"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_marginRight="20dp">
            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/icon_share_white"/>
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_share"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <ImageButton
                android:id="@+id/btn_edit"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/icon_edit_white"/>
            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_edit"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:orientation="vertical"

            android:layout_marginLeft="20dp">
            <ImageButton
                android:id="@+id/btn_delete"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/icon_delete_white"/>
            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_delete"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>